had to increase memory and permgem size